# Compiler-Project

./: CMakeLists.txt  Conventions.txt  README.md  arithmetic.gehu  build.sh  example.gehu  example3.txt  resume.gehu  test.gehu
Compiler/: GRAMMAR.txt  a.out  ast.c  ast.h  astDef.h  code.asm  code2.asm  code2.out  code_gen.c  code_gen.h  code_genDef.h  compiler  driver.c  error_handler.c  error_handler.h  error_handlerDef.h  interface.h  keyword_table.c  keyword_table.h  keyword_tableDef.h  lexer.c  lexer.h  lexerDef.h  makefile  nary_tree.c  nary_tree.h  nary_treeDef.h  parser.c  parser.h  parserDef.h  printer.c  printer.h  printerDef.h  semantic_analyzer.c  semantic_analyzer.h  semantic_analyzerDef.h  stack.c  stack.h  stackDef.h  symbol_table.c  (+6 more)
Compiler/testcases/: main6.txt
docs/: API.md
lib/: std.gehu
source/: main.cpp
source/codegen/: codegen_visitor.cpp  codegen_visitor.hpp
source/lexer/: lexer.cpp  lexer.hpp
source/parser/: ast.cpp  ast.hpp
source/semantic/: semantic_visitor.cpp  semantic_visitor.hpp  type.hpp
src/: CMakeLists.txt  ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp
src/analysis/: scope.hpp  semantic_visitor.hpp  symbol.hpp  type.cpp  type.hpp
src/codegen/: codegen_visitor.cpp  codegen_visitor.hpp
test/: CMakeLists.txt  CMakeLists.txt.simple  CMakeLists.txt.test.gehu  easy.gehu  minimal.gehu  run_test.sh  simple_test  simple_test.cpp  test.cpp  test.gehu  test.gehu.bak  unit.gehu
test/simple_build/: CMakeCache.txt  Makefile  cmake_install.cmake
